# Mymo

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: llm.ts
src/chat/: ChatPanel.tsx
src/pet/: Bubble.tsx  Pet.tsx
src/settings/: SettingsPanel.tsx
src/store/: index.ts
