[package]
name = "mymo"
version = "0.1.0"
edition = "2021"

[lib]
name = "mymo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-http = "2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
